# towr

towr/: CMakeLists.txt
towr/include/towr/: nlp_formulation.h  nlp_formulation_drive.h  parameters.h  parameters_drive.h
towr/include/towr/constraints/: base_acc_limits_constraint.h  base_motion_constraint.h  dynamic_constraint.h  ee_acc_constraint.h  ee_acc_limits_constraint.h  force_constraint.h  force_wheels_constraint.h  range_of_motion_constraint.h  spline_acc_constraint.h  stability_constraint.h  terrain_constraint.h  terrain_wheels_constraint.h  wheels_acc_limits_constraint.h  wheels_lateral_constraint.h  wheels_motion_constraint.h  wheels_non_holonomic_constraint.h
towr/include/towr/costs/: torque_cost.h  (+1 more)
towr/matlab/: GetTerrainHeight.m  RotationWorldToContactFrame.m  RotationWorldToContactFrame.m~  build_time_vec.m  gait_terrain_tests.m  plot_3D_desired_motion.m  plot_3D_desired_motion.m~  plot_rosbag_hybrid.m  plot_rosbag_hybrid.m~  plot_rosbag_hybrid_phases.m  plots_thesis.m  tmp_plots.m
towr/src/: base_acc_limits_constraint.cc  base_motion_constraint.cc  dynamic_constraint.cc  ee_acc_constraint.cc  ee_acc_limits_constraint.cc  force_constraint.cc  force_wheels_constraint.cc  height_map.cc  height_map_examples.cc  nlp_formulation.cc  nlp_formulation_drive.cc  nodes_variables.cc  nodes_variables_ee_wheels.cc  nodes_variables_phase_based.cc  parameters.cc  parameters_drive.cc  quadruped_gait_generator.cc  range_of_motion_constraint.cc  robot_model.cc  single_rigid_body_dynamics.cc  spline.cc  spline_acc_constraint.cc  spline_holder_drive.cc  stability_constraint.cc  terrain_constraint.cc  terrain_wheels_constraint.cc  time_discretization_constraint.cc  torque_cost.cc  wheels_acc_limits_constraint.cc  wheels_lateral_constraint.cc  wheels_motion_constraint.cc  wheels_motion_cost.cc  wheels_non_holonomic_constraint.cc
towr/test/: anymal_example.cc  anymal_wheels_example.cc  harpia_example.cc
towr_drive/: CMakeLists.txt  package.xml
towr_drive/bags/: anymal_wheels_matlab.bag  anymal_wheels_matlab_209aprox.bag  anymal_wheels_matlab_213aprox.bag  anymal_wheels_matlab_302aprox.bag  anymal_wheels_matlab_314aprox.bag  anymal_wheels_matlab_318aprox.bag  anymal_wheels_matlab_45_mass_4-0s.bag  anymal_wheels_matlab_45_mass_4-2s.bag  anymal_wheels_matlab_45_mass_4-5s.bag  anymal_wheels_matlab_65_3-8s.bag  anymal_wheels_matlab_65_3-9s.bag  anymal_wheels_matlab_65_mass_towr.bag  anymal_wheels_matlab_GAP_STAB.bag  anymal_wheels_states.bag  anymal_wheels_traj.bag  flat_bear_matlab.bag  gap_bear_matlab.bag  harpia_matlab.bag  multiple_slopes_bear_matlab.bag  sine_bear_matlab.bag  sine_high_freq_bear_matlab.bag  slope_no_plat_bear_matlab.bag  step_bear_v1_matlab.bag  step_matlab_v1.bag  step_matlab_v2.bag
towr_drive/config/: parameters.yaml
towr_drive/include/towr_drive/: towr_drive_ros_interface.h
towr_drive/launch/: towr_drive.launch  towr_drive_nodes.launch
towr_drive/matlab/: GetRotationMatrixBaseToWorld.m  GetTerrainBasis.m  GetTerrainHeight.m  dynamics_harpia.m  load_rosbag.m  plot_rosbag.m  plot_stability_measure.m  robot_body_pos.m  rotation_tests.m  stability_harpia.m  test_five_steps.m
towr_drive/rviz/: green_screen.rviz  green_screen_v2.rviz  xpp_towr_drive.rviz  xpp_towr_harpia.rviz
towr_drive/src/: extract_geom_msg_rosbag.cc  send_trajectory_from_bag.cc  towr_drive_ros_app.cc  towr_drive_ros_interface.cc
towr_drive/test/: anymal_wheels_test.cc  anymal_wheels_test_rotations.cc
towr_ros/: CMakeLists.txt  package.xml
towr_ros/bags/: anymal_hybrid_traj.bag  anymal_wheels_matlab.bag  block_hybrid_smooth_1.bag  block_hybrid_v2.bag  drive_then_trot_traj.bag  drive_traj.bag  final_60_graus.bag  final_90_graus.bag  flat_gait_C1.bag  flat_pace_traj.bag  flat_trot_traj.bag  gap_hybrid.bag  gap_hybrid_v2.bag  lateral_trot_hybrid.bag  walk_hybrid_traj.bag
towr_ros/config/: parameters.yaml
towr_ros/include/towr_ros/: helpers_towr.h  towr_ros_interface.h
towr_ros/launch/: towr_nodes.launch  towr_ros.launch
towr_ros/msg/: OptParameters.msg
towr_ros/rviz/: xpp_towr_wheels.rviz
towr_ros/src/: goal_pose_publisher.cc  helpers_towr.cc  rviz_terrain_publisher.cc  towr_ros_app.cc  towr_ros_interface.cc
towr_test/: CMakeLists.txt  package.xml
towr_test/bags/: anymal_wheels_matlab.bag  anymal_wheels_states.bag  anymal_wheels_traj.bag  plot_rosbag.m  plot_stability_measure.m  step_bear_towr.bag  step_bear_um_pe_cada_vez.bag  terrain_normals.txt
towr_test/config/: parameters.yaml
towr_test/launch/: anymal_wheels_test.launch
towr_test/test/: anymal_wheels_test.cc  anymal_wheels_test_rotations.cc  vector_derivatives_tests.m
(+17 files in other folders)
