<?xml version="1.0"?>
<package format="2">
  <name>towr_drive</name>
  <version>1.4.0</version>
  <description>
    Trajectory generation tests for ANYmal with wheels.
  </description>

  <author>Vivian Suzano Medeiros</author>
  <maintainer email="vivian.suzanomedeiros@mavt.ethz.ch">Vivian Suzano Medeiros</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>towr_ros</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>towr</depend>
  <depend>xpp_states</depend>
  <depend>xpp_msgs</depend>
  <depend>anymal_wheels_ctrl_track_msgs</depend>
  <depend>roslib</depend>
  <depend>yaml_tools</depend>
  
  <exec_depend>xpp_anymal_wheels</exec_depend>

</package>
